test/parallel/taskPar/vass/with-false.good
with-false.chpl:3: syntax error: syntax error near 'false'
