test/parallel/taskPar/vass/with-false.chpl
// Ensure the compiler produces a graceful error.

coforall Locales with (in false) {
  writeln();
}
